Create download content type.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "@angular/platform-browser": "~13.1.2",
     "@angular/platform-browser-dynamic": "~13.1.2",
     "@angular/router": "~13.1.2",
+    "@ng-druid/attributes": "0.0.5",
+    "@ng-druid/content": "0.0.5",
+    "@ng-druid/material": "0.0.5",
+    "@ng-druid/plugin": "0.0.5",
+    "@ng-druid/utils": "0.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "webpack": "^5.65.0",
