Add extension module.

--- a/package.json
+++ b/package.json
@@ -19,18 +19,27 @@
   "dependencies": {
     "@angular-architects/module-federation": "^14.0.1",
     "@angular/animations": "~13.1.2",
+    "@angular/cdk": "^13.1.2",
+    "@angular/cdk-experimental": "^13.1.2",
     "@angular/common": "~13.1.2",
     "@angular/compiler": "~13.1.2",
     "@angular/core": "~13.1.2",
     "@angular/forms": "~13.1.2",
+    "@angular/material": "^13.1.2",
     "@angular/platform-browser": "~13.1.2",
     "@angular/platform-browser-dynamic": "~13.1.2",
     "@angular/router": "~13.1.2",
-    "@ng-druid/attributes": "0.0.5",
-    "@ng-druid/content": "0.0.5",
-    "@ng-druid/material": "0.0.5",
-    "@ng-druid/plugin": "0.0.5",
-    "@ng-druid/utils": "0.0.5",
+    "@ng-druid/attributes": "0.0.11",
+    "@ng-druid/content": "0.0.11",
+    "@ng-druid/material": "0.0.11",
+    "@ng-druid/plugin": "0.0.11",
+    "@ng-druid/utils": "0.0.11",
+    "@ngrx/data": "^13.0.2",
+    "@ngrx/effects": "^13.0.2",
+    "@ngrx/entity": "^13.0.2",
+    "@ngrx/router-store": "^13.0.2",
+    "@ngrx/store": "^13.0.2",
+    "number-string": "^2.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "webpack": "^5.65.0",
